# payment-ms/docs/swagger.json
@@ -11,14 +11,13 @@
     "paths": {
         "/payments": {
             "get": {
-                "description": "Get all payments",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "payments"
                 ],
-                "summary": "Get all payments",
+                "summary": "List all payments",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -32,7 +31,6 @@
                 }
             },
             "post": {
-                "description": "Create a new payment",
                 "consumes": [
                     "application/json"
                 ],
@@ -62,13 +60,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                        "description": "Invalid request",
                         "schema": {
                             "type": "string"
                         }
@@ -78,7 +70,6 @@
         },
         "/payments/{id}": {
             "get": {
-                "description": "Get payment by ID",
                 "produces": [
                     "application/json"
                 ],
@@ -103,7 +94,7 @@
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Payment not found",
                         "schema": {
                             "type": "string"
                         }
@@ -111,7 +102,6 @@
                 }
             },
             "put": {
-                "description": "Update a payment",
                 "consumes": [
                     "application/json"
                 ],
@@ -121,7 +111,7 @@
                 "tags": [
                     "payments"
                 ],
-                "summary": "Update a payment",
+                "summary": "Update payment status",
                 "parameters": [
                     {
                         "type": "string",
@@ -131,12 +121,15 @@
                         "required": true
                     },
                     {
-                        "description": "Updated Payment Data",
-                        "name": "payment",
+                        "description": "New Status",
+                        "name": "status",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.UpdatePaymentRequest"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 ],
@@ -146,23 +139,10 @@
                         "schema": {
                             "$ref": "#/definitions/domain.Payment"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
                     }
                 }
             },
             "delete": {
-                "description": "Delete a payment",
                 "tags": [
                     "payments"
                 ],
@@ -178,13 +158,10 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "No Content",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "No Content"
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Error deleting",
                         "schema": {
                             "type": "string"
                         }
@@ -198,24 +175,24 @@
             "type": "object",
             "required": [
                 "amount",
+                "method",
                 "order_id",
-                "status",
                 "user_id"
             ],
             "properties": {
                 "amount": {
                     "type": "number"
                 },
-                "order_id": {
-                    "type": "string"
-                },
-                "status": {
+                "method": {
                     "type": "string",
                     "enum": [
-                        "paid",
-                        "pending",
-                        "failed"
+                        "credit_card",
+                        "paypal",
+                        "bank_transfer"
                     ]
+                },
+                "order_id": {
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -224,58 +201,28 @@
         },
         "domain.Payment": {
             "type": "object",
-            "required": [
-                "amount",
-                "order_id",
-                "status",
-                "user_id"
-            ],
             "properties": {
                 "amount": {
                     "type": "number"
                 },
-                "created_at": {
-                    "type": "integer"
+                "createdAt": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "order_id": {
+                "orderId": {
                     "type": "string"
                 },
                 "status": {
-                    "type": "string",
-                    "enum": [
-                        "paid",
-                        "pending",
-                        "failed"
-                    ]
-                },
-                "updated_at": {
-                    "type": "integer"
-                },
-                "user_id": {
+                    "description": "e.g., \"pending\", \"completed\", \"failed\"",
                     "type": "string"
-                }
-            }
-        },
-        "domain.UpdatePaymentRequest": {
-            "type": "object",
-            "required": [
-                "amount",
-                "status"
-            ],
-            "properties": {
-                "amount": {
-                    "type": "number"
                 },
-                "status": {
-                    "type": "string",
-                    "enum": [
-                        "paid",
-                        "pending",
-                        "failed"
-                    ]
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
                 }
             }
         }
