# payment-ms/internal/payment/domain/model.go
@@ -1,11 +1,17 @@
 package domain
 
+import (
+	"time"
+
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
 type Payment struct {
-	ID        string  `json:"id" bson:"_id,omitempty"`
-	OrderID   string  `json:"order_id" bson:"order_id" validate:"required"`
-	UserID    string  `json:"user_id" bson:"user_id" validate:"required"`
-	Amount    float64 `json:"amount" bson:"amount" validate:"required,gt=0"`
-	Status    string  `json:"status" bson:"status" validate:"required,oneof=paid pending failed"`
-	CreatedAt int64   `json:"created_at" bson:"created_at"`
-	UpdatedAt int64   `json:"updated_at" bson:"updated_at"`
+	ID        primitive.ObjectID `bson:"_id,omitempty" json:"id"`
+	UserID    string             `json:"userId" bson:"userId"`
+	OrderID   string             `json:"orderId" bson:"orderId"`
+	Amount    float64            `json:"amount" bson:"amount"`
+	Status    string             `json:"status" bson:"status"` // e.g., "pending", "completed", "failed"
+	CreatedAt time.Time          `json:"createdAt" bson:"createdAt"`
+	UpdatedAt time.Time          `json:"updatedAt" bson:"updatedAt"`
 }
