# payment-ms/internal/payment/domain/request.go
@@ -4,10 +4,10 @@ type CreatePaymentRequest struct {
 	OrderID string  `json:"order_id" validate:"required"`
 	UserID  string  `json:"user_id" validate:"required"`
 	Amount  float64 `json:"amount" validate:"required,gt=0"`
-	Status  string  `json:"status" validate:"required,oneof=paid pending failed"`
+	Method  string  `json:"method" validate:"required,oneof=credit_card paypal bank_transfer"`
 }
 
 type UpdatePaymentRequest struct {
 	Amount float64 `json:"amount" validate:"required,gt=0"`
-	Status string  `json:"status" validate:"required,oneof=paid pending failed"`
+	Status string  `json:"status" validate:"required,oneof=pending completed failed"`
 }
